@@ -388,41 +388,6 @@ class ConnectionPool extends EventEmitter {
             propagateCreateError: true
           }, this.config.pool)
         )
-        const self = this
-        Object.defineProperties(this.pool, {
-          size: {
-            get: () => {
-              const message = 'the `size` property on pool is deprecated, access it directly on the `ConnectionPool`'
-              self.emit('debug', message)
-              process.emitWarning(message)
-              return self.size
-            }
-          },
-          available: {
-            get: () => {
-              const message = 'the `available` property on pool is deprecated, access it directly on the `ConnectionPool`'
-              self.emit('debug', message)
-              process.emitWarning(message)
-              return self.available
-            }
-          },
-          pending: {
-            get: () => {
-              const message = 'the `pending` property on pool is deprecate, access it directly on the `ConnectionPool`'
-              self.emit('debug', message)
-              process.emitWarning(message)
-              return self.pending
-            }
-          },
-          borrowed: {
-            get: () => {
-              const message = 'the `borrowed` property on pool is deprecated, access it directly on the `ConnectionPool`'
-              self.emit('debug', message)
-              process.emitWarning(message)
-              return self.borrowed
-            }
-          }
-        })
 
         this._connecting = false
         this._connected = true
